@@ -1,3 +1,9 @@
+2002-01-09  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* shapes/shapeinf.cc: Pass bg flag as a parameter so the shapes
+	lib is independent of code higher up.
+	* objs/egg.cc:  Fixed remove_this() for the 'caltrops' bug.
+
 2002-01-09  Patrick Burke  <takhisisii@yahoo.com.au>
 	* usecode/ucxt/*: Added ability to specify multiple functions to
 	decompile on the command line. Also some namespace fiddling.
